+++
** New function `define-error'.

** New hook `tty-setup-hook'.

+++
** New macro with-eval-after-load.  Like eval-after-load, but better behaved.

** New library subr-x.el for misc helper functions
*** `hash-table-keys'
*** `hash-table-values'
*** `string-blank-p`
*** `string-empty-p`
*** `string-join`
*** `string-reverse`
*** `string-trim-left'
*** `string-trim-right'
*** `string-trim'

** Obsoleted functions:
*** `log10'
*** `dont-compile'
*** `lisp-complete-symbol'
*** `field-complete'
*** `minibuffer-completion-contents'
*** `isearch-nonincremental-exit-minibuffer'
*** `isearch-filter-visible'
*** `generic-make-keywords-list'

** `with-wrapper-hook' is obsoleted by `add-function'.
The few hooks that used with-wrapper-hook are replaced as follows:
*** `abbrev-expand-function' obsoletes `abbrev-expand-functions'.
*** `completion-in-region-function' obsoletes `completion-in-region-functions'.
*** `filter-buffer-substring-function' obsoletes `filter-buffer-substring-functions'.

** `byte-compile-interactive-only-functions' is now obsolete.
It has been replaced by the symbol property 'interactive-only.

** `split-string' now takes an optional argument TRIM.
The value, if non-nil, is a regexp that specifies what to trim from
the start and end of each substring.

** New function `string-suffix-p'.

** `get-upcase-table' is obsoleted by the new `case-table-get-table'.

** Support for filesystem notifications.
Emacs now supports notifications of filesystem changes, such as
creation, modification, and deletion of files.  This requires the
`glib' API, or the 'inotify' API (on GNU/Linux systems only).  On
MS-Windows systems, this is supported for Windows XP and newer
versions.

** Changes in autorevert.el

---
*** If Emacs is compiled with file notification support, notifications
are used instead of checking the time stamp of the files.  You can
disable this by setting the user option `auto-revert-use-notify' to